[tool.poetry]
name = "course-work3-v2-0"
version = "0.1.0"
description = ""
authors = ["Zotov <ZotovDendos@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_work3_v2"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
